--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ div.tocify {
 veri setleri kullanılacaktır.</li>
 </ul></li>
 </ul>
-<p>– - PISA 2018 Bu verilerin toplandığı ankterler</p>
+<p>PISA 2018 Bu verilerin toplandığı ankterler</p>
 <ul>
 <li><a href="PISA_anketler/Turkish%20(Turkey)%20For%20Student_Questionnaire_Booklet_2018.pdf">Ogrenci Anketi</a></li>
 <li><a href="PISA_anketler/Turkish%20(Turkey)%20For%20School_Questionnaire_2018.pdf">Okul Anketi</a></li>
@@ -347,7 +347,7 @@ veri setleri kullanılacaktır.</li>
 </div>
 <div id="kodlar" class="section level2">
 <h2>Kodlar</h2>
-<p>Eğitimin tum materyallerine <a href="https://github.com/atalay-k/veri_duzenleme.git">bura</a> dan ulaşabilirsiniz.</p>
+<p>Eğitimin tum materyallerine <a href="https://github.com/atalay-k/VM.git">bura</a> dan ulaşabilirsiniz.</p>
 </div>
 <div id="gün-planı" class="section level2">
 <h2>Gün Planı</h2>
