--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@ veri setleri kullanılacaktır.</li>
 <div id="kodlar" class="section level2">
 <h2>Kodlar</h2>
 <p>Eğitimin tum materyallerine <a href="https://github.com/atalay-k/VM.git">bura</a> dan ulaşabilirsiniz.</p>
+<p>Eğitim materyallerine <a href="https://bit.ly/3HfQxO9">Rstudio cloud</a> üzerinden de çalışabilirsiniz.</p>
 </div>
 <div id="gün-planı" class="section level2">
 <h2>Gün Planı</h2>
