--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ div.tocify {
 <br></p></li>
 <li><p><a href="sunum/01.html">dplyr paketi giris</a></p>
 <ul>
-<li>dplyr paket tanıtım</li>
+<li>dplyr paket tanıtımı</li>
 <li>Veri yapısını anlama</li>
 <li>pipe <strong>%&gt;%</strong> operatoru</li>
 <li><strong>select()</strong>, <strong>filter()</strong> ve <strong>arrange()</strong> fonksiyonlar <br> <br></li>
